--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta  name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="./ress.min.css">
         <link rel="stylesheet" href="./style.css">
-        <title>Roysha</title>
+        <title>Roysha-test</title>
     </head>
 
     <body>
