--- a/index.html
+++ b/index.html
@@ -27,6 +27,48 @@
                             Quis ipsum suspendisse ultrices gravida. </p>
                         <a class="btn" href="">Learn More</a>
                     </div>
+
+                    <div class="futures-list">
+                        <section class="card">
+                            <img class="card-icon" src="images/ico_home01.png" alt="#">
+                            <h3 class="card-title">24/7 Services</h3>
+                            <p class="card-text">Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                        </section>
+
+                        <section class="card">
+                            <img class="card-icon" src="images/ico_home02.png" alt="#">
+                            <h3 class="card-title">Instant Cashout</h3>
+                            <p class="card-text">Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                        </section>
+
+                        <section class="card">
+                            <img class="card-icon" src="images/ico_home03.png" alt="#">
+                            <h3 class="card-title">Fully Encrypted</h3>
+                            <p class="card-text">Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                        </section>
+
+                        <section class="card">
+                            <img class="card-icon" src="images/ico_home04.png" alt="#">
+                            <h3 class="card-title">Safe and Secure</h3>
+                            <p class="card-text">Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <section class="payment">
+                <div class="inner">
+                    <div class="outline">
+                        <p class="outline-notes">ONLINE PAYMENT</p>
+                        <H2 class="outline-title">Make Your Online Payment Almost Every Site</H2>
+                        <p class="outline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="outline-text">ccumsanamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <a class="btn" href="">Make a Payment</a>
+                    </div>
+
+                    <div class="payment-pic">
+                        <img src="images/pic_payment.png" alt="">
+                    </div>
                 </div>
             </section>
 
